# claude-fleet-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
src/claude_fleet_monitor/: __init__.py  cli.py  discovery.py  focus.py  hook.py  mcp_pyproject.toml  mcp_server.py  models.py  tongs_plugin.py  tui.py
src/claude_fleet_monitor/scripts/: fleet-focus.sh  fleet-hook.sh  fleet-monitor.sh
src/claude_fleet_monitor/terminal_apis/: __init__.py  base.py  generic.py  gnome.py  iterm2.py  konsole.py  macos_terminal.py  tmux.py  windows_terminal.py  zellij.py
src/claude_fleet_monitor/views/: fleet_screen.py
src/claude_fleet_monitor/widgets/: __init__.py  detail_panel.py  session_table.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_focus.py  test_hook.py  test_models.py  test_terminal_apis.py  test_tongs_plugin.py  test_tui_widgets.py
