[project]
name = "claude-fleet-monitor"
dynamic = ["version"]
description = "Fleet monitoring for Claude Code sessions - TUI dashboard, MCP server, and terminal focus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0",
    "mcp[cli]>=1.0.0",
]
authors = [
    {name = "Andre Motta"},
]
keywords = ["claude", "claude-code", "mcp", "monitoring", "fleet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
tongs = ["tongs>=0.1"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.24"]

[project.scripts]
claude-fleet = "claude_fleet_monitor.cli:main"
claude-fleet-hook = "claude_fleet_monitor.hook:main"

[project.entry-points."tongs.plugins"]
fleet-monitor = "claude_fleet_monitor.tongs_plugin:FleetMonitorPlugin"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/claude_fleet_monitor/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_fleet_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
